--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:emu": "VITE_FIREBASE_EMULATORS=1 vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
